# Chotra

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
Chotra/: CMakeLists.txt
Chotra/includes/Chotra/: .application.h.swp  application.h  test.h
Chotra/includes/Chotra/Events/: event.h
Chotra/src/: .test.cpp.swp  application.cpp  application.h  background.cpp  background.h  base_renderer.cpp  base_renderer.h  bloom.cpp  bloom.h  blur.cpp  blur.h  camera.cpp  camera.h  cylinder.cpp  cylinder.h  dashboard.cpp  dashboard.h  environment.cpp  environment.h  event.h  glfw_context.cpp  glfw_context.h  gui.cpp  gui.h  level1 — копия.lv  level1.lv  level_demo1 — копия.lv  main.cpp  material.cpp  material.h  material_texture.cpp  material_texture.h  mesh.cpp  mesh.h  obj_model.cpp  obj_model.h  platform_utils.cpp  platform_utils.h  quad.cpp  quad.h  (+30 more)
Chotra/src/Events/: event.h
Chotra/src/models/: imgui.ini  sphere.mtl
Chotra/src/models — копия/: bloom.mtl  plane.mtl
Chotra/src/models/textures/plastic/: imgui.ini
Chotra/src/renderer/: bloom.cpp  bloom.h  quad.cpp  renderer.cpp  renderer.h  renderer_base.cpp  renderer_base.h  renderer_deferred.cpp  renderer_deferred.h  renderer_forward.cpp  renderer_forward.h  renderer_ssao.cpp  renderer_ssao.h  renderer_ssr.cpp  renderer_ssr.h  rendering_settings.h
Chotra/src/resources/: level0.lv  level1.lv  level_demo.lv  level_mini.lv
Chotra/src/resources/models/: copper.mtl  default.mtl  figure_1.mtl  figure_3.mtl  figure_4.mtl  granite.mtl  grass.mtl  plastic.mtl  rusted_iron.mtl  sphere.mtl  wall.mtl  worn-matal.mtl
Chotra/src/resources/models/Model_Ambient/: ground.mtl  panels.mtl
Chotra/src/resources/models/Tuning/Fbx/: Tire.fbx  wheel_1.fbx
Chotra/src/resources/models/Tuning/Tire/: tire.mtl
Chotra/src/resources/models/Tuning/wheel_1/: wheel_1.1.mtl  wheel_1.2.mtl  wheel_1.mtl
Chotra/src/resources/models/Tuning/wheel_1/Fbx/: Wheel_1.fbx
Chotra/src/resources/models/Tuning/wheel_2/: wheel_2.1.mtl  wheel_2.2.mtl  wheel_2.mtl
Chotra/src/resources/models/radio/: radio.mtl
Chotra/src/resources/models/textures/plastic/: imgui.ini
Chotra/src/resources/shaders/: background.fs  blur.fs  combine.fs  deferred_geometry_pass.fs  deferred_lighting_pass.fs  deferred_pre_lighting_pass.fs  deferred_shading.fs  downsampling.fs  equirectangular_to_cubemap.fs  lights_shader.fs  pbr_shader.fs  pbr_shader.vs  prefilter.fs  render_on_screen.fs  render_to_screen.fs  screen_shader.fs  ssao.fs  ssr.fs  ssr_blur.fs
Chotra/src/resources/shaders/bloom/: screen_divide_shader.fs
Chotra/src/resources/shaders/environment/: prefilter.fs  skybox.fs  sun_shader.fs  sun_shader.vs
Chotra/src/shaders/: background.fs  bloom_final.fs  deferred_geometry_pass.fs  deferred_geometry_pass.vs  deferred_lighting_pass.fs  equirectangular_to_cubemap.fs  final.fs  g_buffer.fs  g_buffer.vs  irradiance_convolution.fs  lights_shader.fs  pbr_shader.fs  pbr_shader.vs  screen_shader.fs  ssao.fs
Chotra/src/shaders — копия/: bloom_final.fs  geometry_pass.vs  only_bloom_shader.fs  screen_shader.fs
ChotraEngineCore/: CMakeLists.txt
ChotraEngineCore/includes/ChotraEngineCore/: test.h
ChotraEngineCore/src/: test.cpp
ChotraEngineEditor/: CMakeLists.txt
ChotraEngineEditor/src/: main.cpp
Core/: CMakeLists.txt
Core/src/: test.cpp
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
